# Top500_AMD_data

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.piptools  requirements.txt
scripts/: phase0_download_lists.py  phase1_convert_to_csv.py  phase2_1_amd_per_file.py  phase2_2_amd_by_build_year.py  phase2_3_build_pdf.py  run_phase2.py  run_pipeline.py
src/top500list/: __init__.py  amd_cohort.py  amd_filter.py  cli.py  io_utils.py  paths.py  phase0_download.py  phase1_convert.py  phase2_amd_by_year.py  phase2_amd_tables.py  phase3_pdf_report.py
tests/: test_amd_cohort.py  test_amd_filter.py  test_io_utils.py  test_phase0_download.py  test_phase3_pdf_report.py  test_pipeline.py
tests/fixtures/: top500_sample_2024.csv  top500_sample_2026.csv
