[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "top500list"
version = "0.1.0"
description = "Phased TOP500 AMD server analysis pipeline"
requires-python = ">=3.11"
dependencies = [
    "click",
    "matplotlib",
    "openpyxl",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
top500-pipeline = "top500list.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
